k8s/redis.yaml
## Redis Master
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: flash-sale
spec:
  clusterIP: None
  selector:
    app: redis
    role: master
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-master
  namespace: flash-sale
spec:
  serviceName: redis-master
  replicas: 1
  selector:
    matchLabels:
      app: redis
      role: master
  template:
    metadata:
      labels:
        app: redis
        role: master
    spec:
      containers:
        - name: redis
          image: redis:8
          command: ["redis-server", "--appendonly", "yes"]
          ports:
            - containerPort: 6379
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 3
            periodSeconds: 3
---
## Redis Replicas
apiVersion: v1
kind: Service
metadata:
  name: redis-replicas
  namespace: flash-sale
spec:
  clusterIP: None
  selector:
    app: redis
    role: replica
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-replica
  namespace: flash-sale
spec:
  serviceName: redis-replicas
  replicas: 2
  selector:
    matchLabels:
      app: redis
      role: replica
  template:
    metadata:
      labels:
        app: redis
        role: replica
    spec:
      containers:
        - name: redis
          image: redis:8
          command:
            - redis-server
            - --replicaof
            - redis-master-0.redis-master.flash-sale.svc.cluster.local
            - "6379"
            - --appendonly
            - "yes"
          ports:
            - containerPort: 6379
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: redis-sentinel
  namespace: flash-sale
spec:
  selector:
    app: redis-sentinel
  ports:
    - port: 26379
      targetPort: 26379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-sentinel
  namespace: flash-sale
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redis-sentinel
  template:
    metadata:
      labels:
        app: redis-sentinel
    spec:
      containers:
        - name: sentinel
          image: redis:8
          command: ["redis-sentinel", "/tmp/sentinel.conf"]
          ports:
            - containerPort: 26379
          readinessProbe:
            exec:
              command: ["redis-cli", "-p", "26379", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 3
          volumeMounts:
            - name: sentinel-data
              mountPath: /tmp
      volumes:
        - name: sentinel-config-vol
          configMap:
            name: sentinel-config
        - name: sentinel-data
          emptyDir: {}
